create some slides

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,1 +1,6 @@
-@import "components/foolPage";
+@import "components/pageable";
+@import "components/fonts";
+@import "components/default";
+@import "components/section1";
+@import "components/section2";
+@import "components/section3";
