--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,4 +1,5 @@
-@import "components/pageable";
+//@import "components/pageable";
+@import "components/fullpage";
 @import "components/fonts";
 @import "components/default";
 @import "components/section1";
