--- a/src/style/components/_section1.scss
+++ b/src/style/components/_section1.scss
@@ -16,7 +16,7 @@
       grid-template-rows: auto;
     }
     @media screen and (max-width: 768px){
-      grid-template-columns: 50vw 1fr;
+      grid-template-columns: 1fr 1fr;
       grid-template-areas: "one three" "two two";
       grid-template-rows: auto;
     }
@@ -46,7 +46,9 @@
       @media screen and (max-width: 980px){
         width: 100%;
         height: 100%;
-        object-fit: contain;
+      }
+      text {
+        font-family: 'Pribambas', sans-serif;
       }
     }
   }
