--- a/src/style/components/_section3.scss
+++ b/src/style/components/_section3.scss
@@ -213,7 +213,9 @@
         }
 
         input, select {
+          -webkit-appearance: none;
           width: 100%;
+          background-color: #fff;
           box-shadow: 0 0 3px rgba(0,0,0,.3) inset;
           outline: none;
           border: none;
