--- a/src/style/components/_section1.scss
+++ b/src/style/components/_section1.scss
@@ -46,6 +46,7 @@
       @media screen and (max-width: 980px){
         width: 100%;
         height: 100%;
+        max-height: 40vh;
       }
       text {
         font-family: 'Pribambas', sans-serif;
