--- a/src/style/components/_section3.scss
+++ b/src/style/components/_section3.scss
@@ -86,14 +86,26 @@
             }
           }
         }
+
+        &:last-child {
+          @media screen and (max-height: 800px) and (min-width: 768px){
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+            .content {
+              margin-top: 0;
+            }
+          }
+        }
       }
 
       .title {
-        font-size: 75px;
+        font-size: 40px;
         color: #000;
         text-decoration: none;
         @media screen and (max-width: 1020px){
-          font-size: 50px;
+          font-size: 35px;
         }
 
         @media screen and (max-width: $sm){
@@ -117,10 +129,10 @@
 
         img {
           margin-right: 20px;
-          max-width: 130px;
+          max-width: 100px;
           height: auto;
           @media screen and (max-width: $sm){
-            max-width: 100px;
+            max-width: 80px;
             margin-right: 0;
             margin-bottom: 10px;
           }
@@ -129,10 +141,13 @@
             margin-right: 10px;
             max-width: 60px;
           }
+          @media screen and (max-height: 800px){
+            max-width: 50px;
+          }
         }
 
         &_text {
-          font-size: 35px;
+          font-size: 25px;
           color: #000;
           text-decoration: none;
           @media screen and (max-width: $lg){
@@ -143,7 +158,7 @@
           }
 
           &__bold {
-            font-size: 40px;
+            font-size: 30px;
             @media screen and (max-width: $lg){
               font-size: 25px;
             }
@@ -239,6 +254,29 @@
           height: 30px;
         }
       }
+    }
+  }
+
+  &_info {
+    z-index: 2;
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 30px;
+    width: 90%;
+    @media screen and (max-width: 768px){
+      flex-direction: column;
+    }
+    a {
+      text-decoration: none;
+      margin-left: 10px;
+      color: $red;
+      white-space: nowrap;
     }
   }
 }
