--- a/src/style/components/_section1.scss
+++ b/src/style/components/_section1.scss
@@ -33,6 +33,18 @@
           animation: 2s infinite fadeOut step-end;
         }
       }
+
+      &_startEnd {
+        color: $orange;
+        text-align: center;
+        background-color: #fff;
+        border-radius: 5px;
+        padding: 3px 8px;
+        box-shadow: 1px 3px 5px rgba(0,0,0,.4) inset;
+        margin: 0 auto 20px;
+        max-width: 350px;
+        font-size: 32px;
+      }
     }
     .three {grid-area: three; z-index: 1;}
 
