--- a/src/style/components/_section3.scss
+++ b/src/style/components/_section3.scss
@@ -186,6 +186,51 @@
       &.active {
         display: block;
       }
+
+      .scrollWrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 5px 0 0;
+        span {
+          display: block;
+        }
+
+        .scroll {
+          max-height: 300px;
+          overflow-y: auto;
+          padding: 20px 0;
+          @media screen and (max-height: 900px) and (min-width: 768px){
+            max-height: 200px;
+          }
+          @media screen and (max-height: 800px) and (min-width: 768px){
+            max-height: 100px;
+          }
+        }
+
+        .scrollBtn {
+          border: solid black;
+          border-width: 0 3px 3px 0;
+          display: inline-block;
+          padding: 10px;
+          @media screen and (max-width: 768px){
+            padding: 7px;
+          }
+
+          &:hover {
+            border-width: 0 4px 4px 0;
+            cursor: pointer;
+          }
+          &.top {
+            transform: rotate(-135deg);
+            -webkit-transform: rotate(-135deg);
+          }
+          &.bottom {
+            transform: rotate(45deg);
+            -webkit-transform: rotate(45deg);
+          }
+        }
+      }
     }
 
     form {
